recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:15: error: reassignment to val
    Int=Int-1
       ^Koch:16: error: type mismatch;
 found   : Int.type
 required: Int
    snowSide(Int,length/3)
             ^Koch:18: error: type mismatch;
 found   : Int.type
 required: Int
    snowSide(Int,length/3)
             ^Koch:20: error: type mismatch;
 found   : Int.type
 required: Int
    snowSide(Int,length/3)
             ^Koch:22: error: type mismatch;
 found   : Int.type
 required: Int
    snowSide(Int,length/3)
             ^