recursion.logo.lessons.recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
  snowSide(levels, length);
  right(120);
  setColor(Color.blue);
  snowSide(levels, length);
  right(120);
  setColor(Color.orange);
  snowSide(levels, length);
  right(120);
}
def snowSide(levels:Int, length:Double) {
  if(Int==0){
  }
  else{
    Int=Int-1
    snowSide(Int,length/3)
    gauche(60)
    snowSide(Int,length/3)
    droite(120)
    snowSide(Int,length/3)
    gauche(60)
    snowSide(Int,length/3)
  }
}